<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">HelpFinder</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_connection_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">HelpFinder Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="label_enable">Enable </string>
    <string name="label_ok">OK </string>
    <string name="label_reset">Reset </string>
    <string name="label_cancel">Cancel </string>
    <string name="label_btn_reset">Reset</string>
    <string name="label_btn_notificatinEnabled">Not. ena.</string>
    <string name="label_btn_notificatinDisabled">Not. dis.</string>
    <string name="label_btn_scan">Scan</string>
    <string name="label_btn_addDevice">Add device</string>
    <string name="tvTitle">Your Jewelry Protects You</string>
    <string name="label_SignUp">Sign Up</string>
    <string name="label_LogIn">Log In</string>
    <string name="textTerms">By tapping Create Account you are indicating</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_setting">Settings..</string>
    <string name="label_btn_protect">Start</string>


</resources>
 